<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.carrentalapplication.controller.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/carNumberView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/carNum"
            />
        <TextView
            android:id="@+id/modelNumView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/branchNum"
            />
        <TextView
            android:id="@+id/kilometersView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/kilometrrs"
            />
        <TextView
            android:id="@+id/branchNumberView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/branchNum"
            />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>